Updated to JDK 20.0.1